--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -1,10 +1,20 @@
 .element__like-button {
-  width:22px;
-  height:19px;
+  width: 22px;
+  height: 19px;
   background: url(../../../images/element-like.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   border: none;
   padding: 0;
+  transition: opacity 1s ease;
+}
+
+.element__like-button:hover {
+  opacity: 0.5;
+}
+
+.element__like-button:active {
+  background: url(../../../images/element-like-active.svg);
+  opacity: 1;
 }
