--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,18 +1,13 @@
 .element__title {
-  max-width: 246px;
+  max-width: 200px;
   background: #ffffff;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
   color: #000000;
-  margin: 25px 15px 19px 21px;
-  display: flex;
-  justify-content: space-between;
-}
-
-@media screen and (max-width: 767px) {
-  .element__title {
-  margin-bottom: 21px;
-  }
+  margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
