--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -9,6 +9,7 @@
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
+  background: #000000;
 }
 
 @media screen and (max-width: 767px) {
@@ -16,4 +17,3 @@
     margin: 28px auto 36px;
   }
 }
-
