--- a/pages/index.css
+++ b/pages/index.css
@@ -17,7 +17,16 @@
 @import url("../blocks/element/element.css");
 @import url("../blocks/element/__image/element__image.css");
 @import url("../blocks/element/__title/element__title.css");
+@import url("../blocks/element/__description/element__description.css");
 @import url("../blocks/element/__like-button/element__like-button.css");
-
-
-
+@import url("../blocks/popup/popup.css");
+@import url("../blocks/popup/__container/popup__container.css");
+@import url("../blocks/popup/__close-button/popup__close-button.css");
+@import url("../blocks/edit-form/edit-form.css");
+@import url("../blocks/edit-form/__heading/edit-form__heading.css");
+@import url("../blocks/edit-form/__button/edit-form__button.css");
+@import url("../blocks/edit-form/__input-container/edit-form__input-container.css");
+@import url("../blocks/edit-form/__item/edit-form__item.css");
+@import url("../blocks/edit-form/__line/edit-form__line.css");
+@import url("../blocks/edit-form/__handlers/edit-form__handlers.css");
+@import url("../blocks/popup/_opened/popup_opened.css");
