--- a/blocks/popup/__heading/popup__heading.css
+++ b/blocks/popup/__heading/popup__heading.css
@@ -1,4 +1,4 @@
-.edit-form__heading {
+.popup__heading {
   max-width: 330px;
   font-style: normal;
   font-weight: 900;
@@ -9,7 +9,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .edit-form__heading {
+  .popup__heading {
     max-width: 238px;
     font-size: 18px;
     line-height: 22px;
