--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -8,11 +8,9 @@
   background-repeat: no-repeat;
   background-position: center;
   margin: auto 0;
-  position: absolute;
-  right: 0;
-  align-self: center;
   padding: 0;
   transition: opacity 1s ease;
+  cursor: pointer;
 }
 
 .profile__add-button:hover {
@@ -22,9 +20,6 @@
 @media screen and (max-width: 767px) {
   .profile__add-button {
     width: 282px;
-    position: static;
-    background: url(../../../images/add-profile-small.svg);
-    background-repeat: no-repeat;
-    background-position: center;
+    background-size: 16px 16px;
   }
 }
