--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,4 +1,4 @@
-.elements {
+.cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
   gap: 20px 17px;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .elements {
+  .cards {
     margin: 36px auto 48px;
   }
 }
