--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,9 +1,13 @@
 .header__logo {
   width: 142px;
   height: 33px;
-  background-image: url(../../../images/logo.svg);
   background-size: contain;
   background-repeat: no-repeat;
+  transition: opacity 1s ease;
+}
+
+.header__logo:hover {
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 767px) {
