--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,4 +6,7 @@
   min-height: 100%;
   background: rgba(0, 0, 0, 0.5);
   display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
