--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -1,13 +1,11 @@
-.profile {
+.profile__container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
 }
 
 @media screen and (max-width: 767px) {
-  .profile {
+  .profile__container {
     flex-direction: column;
     align-items: center;
-    margin: 0 19px;
   }
 }
