--- a/pages/index.css
+++ b/pages/index.css
@@ -8,25 +8,25 @@
 @import url("../blocks/profile/__avatar/profile__avatar.css");
 @import url("../blocks/profile/__info/profile__info.css");
 @import url("../blocks/profile/__title/profile__title.css");
+@import url("../blocks/profile/__container/profile__container.css");
 @import url("../blocks/profile/__subtitle/profile__subtitle.css");
 @import url("../blocks/profile/__add-button/profile__add-button.css");
 @import url("../blocks/profile/__edit-button/profile__edit-button.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
-@import url("../blocks/elements/elements.css");
-@import url("../blocks/element/element.css");
-@import url("../blocks/element/__image/element__image.css");
-@import url("../blocks/element/__title/element__title.css");
-@import url("../blocks/element/__description/element__description.css");
-@import url("../blocks/element/__like-button/element__like-button.css");
+@import url("../blocks/cards/cards.css");
+@import url("../blocks/card/card.css");
+@import url("../blocks/card/__image/card__image.css");
+@import url("../blocks/card/__title/card__title.css");
+@import url("../blocks/card/__description/card__description.css");
+@import url("../blocks/card/__like-button/card__like-button.css");
 @import url("../blocks/popup/popup.css");
 @import url("../blocks/popup/__container/popup__container.css");
+@import url("../blocks/popup/__heading/popup__heading.css");
 @import url("../blocks/popup/__close-button/popup__close-button.css");
 @import url("../blocks/edit-form/edit-form.css");
-@import url("../blocks/edit-form/__heading/edit-form__heading.css");
 @import url("../blocks/edit-form/__button/edit-form__button.css");
 @import url("../blocks/edit-form/__input-container/edit-form__input-container.css");
 @import url("../blocks/edit-form/__item/edit-form__item.css");
 @import url("../blocks/edit-form/__line/edit-form__line.css");
-@import url("../blocks/edit-form/__handlers/edit-form__handlers.css");
 @import url("../blocks/popup/_opened/popup_opened.css");
