--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -1,7 +1,7 @@
 .card__like-button {
   width: 22px;
   height: 19px;
-  background: url(../../../images/element-like.svg);
+  background: url(../../../images/card-like.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -16,6 +16,6 @@
 }
 
 .card__like-button:active {
-  background: url(../../../images/element-like-active.svg);
+  background: url(../../../images/card-like-active.svg);
   opacity: 1;
 }
