--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -3,5 +3,6 @@
   height: 120px;
   background: url(../../../images/profile-image.jpg);
   background-size: contain;
+  background-repeat: no-repeat;
   clip-path: ellipse(50% 50%);
 }
