--- a/blocks/image-popup/image-popup.css
+++ b/blocks/image-popup/image-popup.css
@@ -1,4 +1,4 @@
-.popup {
+.image-popup {
   position: fixed;
   top: 0;
   left: 0;
@@ -11,7 +11,5 @@
   justify-content: center;
   align-items: center;
   opacity: 0;
-  transition:visibility 0s linear 0.5s,opacity 0.5s linear;
+  transition: visibility 0s linear 0.1s, opacity 0.5s linear;
 }
-
-
