--- a/blocks/place-form/__item/place-form__item.css
+++ b/blocks/place-form/__item/place-form__item.css
@@ -1,4 +1,4 @@
-.edit-form__item {
+.place-form__item {
   width: 358px;
   padding: 0 0 10px;
   margin: 0 0 27px;
@@ -9,8 +9,8 @@
   border-bottom: 1px solid RGBA(0,0,0,.2);
 }
 
-.edit-form__item::placeholder {
-  width: 238px;
+.place-form__item::placeholder {
+  max-width: 238px;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
