improvements and modifications after review

--- a/blocks/place-form/__item/place-form__item.css
+++ b/blocks/place-form/__item/place-form__item.css
@@ -6,14 +6,16 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  border-bottom: 1px solid RGBA(0,0,0,.2);
+  border-bottom: 1px solid RGBA(0, 0, 0, 0.2);
 }
 
-.place-form__item::placeholder {
-  max-width: 238px;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 17px;
-  color: #000000;
+@media screen and (max-width: 767px) {
+  .place-form__item {
+    width: 238px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
+  }
 }
