validation and webpack

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -29,12 +29,17 @@
 @import url("../blocks/popup/__picture/popup__picture.css");
 @import url("../blocks/popup/__description/popup__description.css");
 @import url("../blocks/popup/__picture-block/popup__picture-block.css");
+@import url("../blocks/popup/__form-error/popup__form-error.css");
 @import url("../blocks/edit-form/edit-form.css");
 @import url("../blocks/edit-form/__button/edit-form__button.css");
 @import url("../blocks/edit-form/__input-container/edit-form__input-container.css");
 @import url("../blocks/edit-form/__item/edit-form__item.css");
+@import url("../blocks/edit-form/__item/_element/edit-form__item_element_about.css");
 @import url("../blocks/popup/_opened/popup_opened.css");
 @import url("../blocks/place-form/place-form.css");
 @import url("../blocks/place-form/__button/place-form__button.css");
 @import url("../blocks/place-form/__input-container/place-form__input-container.css");
 @import url("../blocks/place-form/__item/place-form__item.css");
+@import url("../blocks/place-form/__item/_el/place-form__item_el_link.css");
+@import url("../blocks/popup/__save-button/_disabled/popup__save-button_disabled.css");
+@import url("../blocks/popup/__input/_error/popup__input_error.css");
