--- a/src/blocks/edit-form/__item/edit-form__item.css
+++ b/src/blocks/edit-form/__item/edit-form__item.css
@@ -1,7 +1,7 @@
 .edit-form__item {
   width: 358px;
   padding: 0 0 10px;
-  margin: 0 0 27px;
+  margin: 0;
   border: none;
   text-overflow: ellipsis;
   white-space: nowrap;
