--- a/src/blocks/place-form/__item/place-form__item.css
+++ b/src/blocks/place-form/__item/place-form__item.css
@@ -1,12 +1,14 @@
 .place-form__item {
   width: 358px;
   padding: 0 0 10px;
-  margin: 0 0 27px;
+  margin: 0;
   border: none;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
   border-bottom: 1px solid RGBA(0, 0, 0, 0.2);
+  font-size: 14px;
+  line-height: 17px;
 }
 
 @media screen and (max-width: 767px) {
@@ -14,8 +16,6 @@
     width: 238px;
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;
-    line-height: 17px;
     color: #000000;
   }
 }
