--- a/src/blocks/card/__image/card__image.css
+++ b/src/blocks/card/__image/card__image.css
@@ -2,4 +2,10 @@
   width: 282px;
   height: 282px;
   border-radius: 10px 10px 0px 0px;
+  transition: opacity 1s ease;
+  background-color: rgb(58, 54, 54);
+}
+
+.card__image:hover {
+  opacity: 0.9;
 }
