--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -1,8 +1,10 @@
 .card {
-  max-width: 282px;
+  width: 282px;
   background: #ffffff;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   justify-self: center;
   position:relative;
+  display: flex;
+  flex-direction: column;
 }
