--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,5 +1,10 @@
+.footer {
+  margin-bottom: 60px;
+}
+
 @media screen and (max-width: 767px) {
   .footer {
     margin-left: 19px;
+    margin-bottom: 36px;
   }
 }
