--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,7 +1,8 @@
 .page {
   max-width: 880px;
   min-width: 320px;
-  margin: 45px auto 60px;
+  min-height: 100%;
+  margin: 45px auto 0;
   font-family: "Inter", Arial, sans-serif;
   color: #ffffff;
   -moz-osx-font-smoothing: grayscale;
@@ -10,10 +11,12 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   background: #000000;
+  display: flex;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 767px) {
   .page {
-    margin: 28px auto 36px;
+    margin: 28px auto 0;
   }
 }
