--- a/src/blocks/card/__image/card__image.css
+++ b/src/blocks/card/__image/card__image.css
@@ -4,8 +4,9 @@
   border-radius: 10px 10px 0px 0px;
   transition: opacity 1s ease;
   background-color: rgb(58, 54, 54);
+  cursor: pointer;
 }
 
 .card__image:hover {
-  opacity: 0.9;
+  opacity: 0.7;
 }
