--- a/src/blocks/edit-form/__button/edit-form__button.css
+++ b/src/blocks/edit-form/__button/edit-form__button.css
@@ -4,7 +4,7 @@
   background: #000000;
   border-radius: 2px;
   padding: 0;
-  margin: 38px 0 0 0;
+  margin: 38px 0 27px 0;
   box-sizing: border-box;
   font-style: normal;
   font-weight: normal;
