--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,8 +1,6 @@
 .profile__avatar {
-  width: 120px;
-  height: 120px;
-  background: url(../../../images/profile-image.jpg);
-  background-size: contain;
-  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   clip-path: ellipse(50% 50%);
 }
