--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,6 +8,8 @@
 @import url("../blocks/profile/profile.css");
 @import url("../blocks/profile/__avatar/profile__avatar.css");
 @import url("../blocks/profile/__info/profile__info.css");
+@import url("../blocks/profile/__avatar-container/profile__avatar-container.css");
+@import url("../blocks/profile/__avatar-edit/profile__avatar-edit.css");
 @import url("../blocks/profile/__title/profile__title.css");
 @import url("../blocks/profile/__container/profile__container.css");
 @import url("../blocks/profile/__subtitle/profile__subtitle.css");
@@ -20,9 +22,12 @@
 @import url("../blocks/card/__image/card__image.css");
 @import url("../blocks/card/__title/card__title.css");
 @import url("../blocks/card/__description/card__description.css");
+@import url("../blocks/card/__like-container/card__like-container.css");
 @import url("../blocks/card/__like-button/card__like-button.css");
+@import url("../blocks/card/__like-count/card__like-count.css");
 @import url("../blocks/card/__like-button/_active/card__like-button_active.css");
 @import url("../blocks/card/__delete-button/card__delete-button.css");
+@import url("../blocks/card/__delete-button/_hidden/card__delete-button_hidden.css");
 @import url("../blocks/popup/popup.css");
 @import url("../blocks/popup/__container/popup__container.css");
 @import url("../blocks/popup/__heading/popup__heading.css");
@@ -44,3 +49,9 @@
 @import url("../blocks/place-form/__item/_el/place-form__item_el_link.css");
 @import url("../blocks/popup/__save-button/_disabled/popup__save-button_disabled.css");
 @import url("../blocks/popup/__input/_error/popup__input_error.css");
+
+@import url("../blocks/avatar-form/avatar-form.css");
+@import url("../blocks/avatar-form/__button/avatar-form__button.css");
+@import url("../blocks/avatar-form/__input-container/avatar-form__input-container.css");
+@import url("../blocks/avatar-form/__item/avatar-form__item.css");
+@import url("../blocks/avatar-form/__item/_el/avatar-form__item_el_link.css");
