--- a/src/blocks/popup/__delete-button/popup__delete-button.css
+++ b/src/blocks/popup/__delete-button/popup__delete-button.css
@@ -1,10 +1,10 @@
-.avatar-form__button {
+.popup__delete-button {
   width: 358px;
   height: 50px;
   background: #000000;
   border-radius: 2px;
   padding: 0;
-  margin: 28px 0 36px 0;
+  margin: 0 0 36px 36px;
   box-sizing: border-box;
   font-style: normal;
   font-weight: normal;
@@ -17,12 +17,12 @@
   cursor: pointer;
 }
 
-.avatar-form__button:hover {
+.popup__delete-button:hover {
   opacity: 0.8;
 }
 
 @media screen and (max-width: 767px) {
-  .avatar-form__button {
+  .popup__delete-button {
     width: 238px;
     height: 46px;
     font-size: 14px;
